--- a/app/globals.css
+++ b/app/globals.css
@@ -2,19 +2,26 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
+@layer base {
+  html, * {
+    box-sizing: border-box;
+  }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+  p, span {
+    @apply text-sm
+  }
+
+  .ace_editor span, .ace_editor textarea {
+    font: 12px/normal 'Monaco', 'Menlo', 'Ubuntu Mono', 'Consolas', 'source-code-pro', monospace;
   }
 }
 
-body {
+@layer components {
+  .linkStyle {
+    @apply underline text-blue-500 cursor-pointer w-fit hover:opacity-80
+  }
+
+  .innerContainer {
+    @apply m-auto max-w-[1200px]
+  }
 }
